# PyDSS-Calc

./: .gitignore  README.md  README_AI.md  app.py  et http_proxy=  main_cli.py  pyproject.toml  tcc_debug_cli.py
data/: DATA_SCHEMA.md  library.ods  protection_presets.yaml  ~$library.ods
data/curves/fuse/OEZ/: OEZ_PNa000.tar  PNa000_Gg_10.csv  PNa000_Gg_100.csv  PNa000_Gg_125.csv  PNa000_Gg_16.csv  PNa000_Gg_160.csv  PNa000_Gg_20.csv  PNa000_Gg_25.csv  PNa000_Gg_32.csv  PNa000_Gg_40.csv  PNa000_Gg_50.csv  PNa000_Gg_6.csv  PNa000_Gg_63.csv  PNa000_Gg_80.csv
data/curves/mcb/Shneider/NSX/: tm16d_max.csv  tm16d_min.csv  tm16d_project.tar  tm63d_max.csv  tm63d_min.csv  tm63d_project.tar
data/curves/mcb/Shneider/iC60/: iC60_project.tar  max.csv  min.csv
data/curves/mcb/Shneider/iC60H_DC/: C60H-DC.tar  max.csv  min.csv
engine/: constants.py  db_manager.py  id_resolver.py  models.py  protection_core.py  protection_old.py  report.py  schema_normalizer.py  solver.py  tcc_debug.py  utils.py  visualizer.py
engine/app/: run_project.py
projects/examples/AC/: config.yaml
projects/examples/AC_HV/: config.yaml
projects/examples/AC_LV/: config.yaml
projects/examples/DC/: config.yaml
projects/examples/TCC/: config.yaml
tests/: test_db_manager.py  test_integration.py
